CuckooChess, DroidFish: Fixed problems reported by "FindBugs".